--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 services:
    php:
         container_name: wyleex_php
-        build: ./php7.3-fpm
+        dockerfile: ./php7.3-fpm/Dockerfile
         ports:
             - 9000
         volumes:
@@ -12,7 +12,7 @@ services:
 
    nginx:
         container_name: wyleex_nginx
-        build: ./nginx
+        dockerfile: ./nginx/Dockerfile
         ports:
             - 93:80
         links:
