--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,18 +1,32 @@
-name: tests
+# This is a basic workflow to help you get started with Actions
 
-on: [push]
+name: CI
 
+# Controls when the action will run. Triggers the workflow on push or pull request
+# events but only for the master branch
+on:
+  push:
+    branches: [ develop ]
+
+# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
+  # This workflow contains a single job called "build"
   build:
-
+    # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
+    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-    - uses: actions/checkout@v1
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-    - name: Deploy docker-compose
-      run: docker-compose build
-    - name: Run docker-compose stack
-      run: docker-compose up -d
-    - name: Check running containers
-      run: docker ps -a
+    - uses: actions/checkout@v2
+
+    - uses: kielabokkie/ssh-key-and-known-hosts-action@v1
+      with:
+        ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
+        ssh-host: pedro@104.155.137.39
+
+    - name: Run a multi-line script
+      run: |
+        cd /home/agustinpereyra_e/sooft/LaVoz-WyleexAnalytics-Web
+        ls
+        echo test, and deploy your project.
