--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,7 @@ jobs:
     - uses: kielabokkie/ssh-key-and-known-hosts-action@v1
       with:
         ssh-private-key: ${{ secrets.PUBLIC_DEVELOP }}
-        ssh-host: pedro@104.155.137.39
+        ssh-host: 104.155.137.39
 
     - name: Run a multi-line script
       run: |
