--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,14 +19,21 @@ jobs:
     steps:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     - uses: actions/checkout@v2
-
-    - uses: kielabokkie/ssh-key-and-known-hosts-action@v1
+    - name: ssh deploy
+    # You may pin to the exact commit or the version.
+    # uses: easingthemes/ssh-deploy@4042d3876fbba3e76b95c16a18830ab0c152aeec
+      uses: easingthemes/ssh-deploy@v2.1.4
       with:
-        ssh-private-key: ${{ secrets.PUBLIC_DEVELOP }}
-        ssh-host: 104.155.137.39
+        # Private Key
+        SSH_PRIVATE_KEY: ${{ secrets.PUBLIC_DEVELOP }}
+        # Remote host
+        REMOTE_HOST: 104.155.137.39
+        # Remote user
+        REMOTE_USER: pedro
+        # Target directory
+        TARGET: /home/agustinpereyra_e/sooft/LaVoz-WyleexAnalytics-Web
 
     - name: Run a multi-line script
       run: |
-        cd /home/agustinpereyra_e/sooft/LaVoz-WyleexAnalytics-Web
         ls
         echo test, and deploy your project.
