--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,12 +1,12 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CI
+name: CI-Lavoz-Web
 
 # Controls when the action will run. Triggers the workflow on push or pull request
 # events but only for the master branch
 on:
   push:
-    branches: [ master ]
+    branches: [ develop ]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -24,8 +24,8 @@ jobs:
       with:
         host: 104.155.137.39
         username: pedro
-        key: ${{ secrets.PUBLIC_DEVELOP }}
+        key: ${{ secrets.DEPLOY_SECRET }}
         port: 22
         script: |
-          cd /var/www
+          cd /home/agustinpereyra_e/sooft/LaVoz-WyleexAnalytics-Web
           ls -al
