--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,7 @@ jobs:
         env:
             SSH_PRIVATE_KEY: ${{ secrets.PUBLIC_DEVELOP }}
             #ARGS: "-rltgoDzvO --delete"
-            SOURCE: "/"
+            #SOURCE: ""
             REMOTE_HOST: 35.239.48.152
             REMOTE_USER: pedro
             TARGET: /home/pedro/ale
