--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,17 +22,17 @@ jobs:
         uses: easingthemes/ssh-deploy@v2.1.5
         env:
             SSH_PRIVATE_KEY: ${{ secrets.PUBLIC_DEVELOP }}
-            #ARGS: "-rltgoDzvO --delete"
-            #SOURCE: ""
             REMOTE_HOST: 35.239.48.152
             REMOTE_USER: pedro
             TARGET: /home/pedro/ale
-        #with:
-        #  host: 35.239.48.152
-        #  username: pedro
-        #  key: ${{ secrets.PUBLIC_DEVELOP }}
-        #  port: 22
-        #  script: |
-        #    cd /var/www/ale/
-        #    docker-compose build
-        #    ls -l
+      - name: Comandos deploy
+        uses: appleboy/ssh-action@master
+        with:
+          host: 35.239.48.152
+          username: pedro
+          key: ${{ secrets.PUBLIC_DEVELOP }}
+          port: 22
+          script: |
+            cd /home/pedro/ale/
+            docker-compose build
+            ls -l
