--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,4 +35,5 @@ jobs:
           script: |
             cd /home/pedro/ale/
             docker-compose build
+            docker-compose up -d
             ls -l
