--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,6 +34,10 @@ jobs:
           port: 22
           script: |
             cd /home/pedro/ale/
+            docker-compose down
             docker-compose build
             docker-compose up -d
+            docker-compose exec php bash -c "npm update"
+            docker-compose exec php bash -c "npm run prod"
+            docker-compose exec php bash -c "php artisan cache:clear"
             ls -l
