--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,7 +37,7 @@ jobs:
             docker-compose down
             docker-compose build
             docker-compose up -d
-            docker-compose exec -T php bash -c "npm update" |
-            docker-compose exec -T php bash -c "npm run prod" |
-            docker-compose exec -T php bash -c "php artisan cache:clear" |
+            docker-compose exec -T php bash -c "npm update"
+            docker-compose exec -T php bash -c "npm run prod"
+            docker-compose exec -T php bash -c "php artisan cache:clear"
             ls -l
